# yaptide

./: .deepsource.toml  .dockerignore  .env  .gitignore  .gitmodules  .gitpod.yml  .gometalinter.json  .pre-commit-config.yaml  .travis.yml  CONTRIBUTORS.txt  Dockerfile  Dockerfile-async-worker  Dockerfile-flask  Dockerfile-helper-worker  Dockerfile-nginx  Dockerfile-postgres  Dockerfile-redis-consumers  Dockerfile-simulation-worker  Dockerfile-worker  Gopkg.toml  LICENSE  README.md  README.rst  app.py  backend.go  build_config.yaml  call_api_example.py  connect.go  copilot-instructions.md  deploy.go  docker-compose-develop.yml  docker-compose.fast.yml  docker-compose.logs.yml  docker-compose.yml  dump.rdb  errors.go  frontend.go  launch.go  logstash.conf  main.go  (+19 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.pre_commit_hooks/: __init__.py  check_not_empty_files.py
.slurm/: sh_run.sh  slurm_routes.py  test_rimrock.py
build_tools/: db_tools.sh  deploy.sh  release.sh  release_conf.json  release_run.sh  release_test_dockerfile  test_release.sh  travis_release.sh
cli/: backend.go  cli.go  config.go  frontend.go  go_utils.go  gopath.go  launch.go  setup.go  utils.go
config/: check.go  config.go  env.go  log.go  setup.go  setup_env.sh  structure.go  urls.py  wsgi.py
db/: account.go  project.go  result.go  setup.go
dockerfiles/: app.Dockerfile  docker-compose.yml  ui.Dockerfile
docs/: Makefile  conf.py  for_developers.md  for_linux_developers.md  for_windows_developers.md  gen_ref_pages.py  ghcr_packages.md  howto.rst  index.md  index.rst  make.bat  mkdocs.md  persistency.md  persistsency.md  simulator_binaries.md  states.md  swagger.md  users.rst  using_docker.md
errors/: errors.go
format/: serialize_utils.go
geometry/: convert_utils.go  geometry.go
local-dev/: .env.local-slurm  HOWTO.md  docker-compose-local-slurm.yml  generate_ssh_ca.sh  setup_local_cluster.sh
log/: logger.go
model/: actions.go  color.go  model.go  project.go  project_settings.go  project_test.go  project_version.go  simulation_constants.go  simulation_result.go  simulation_setup.go  simulation_setup_test.go  user.go  user_test.go
plgrid/: plgdata_methods.py  plgrid_routes.py  rimrock_bash.py  rimrock_methods.py  rimrock_routes.py  sh_run.sh  string_templates.py  test_rimrock.py
process/: runner.go  worker.go
processor/: local.go  processor.go  request.go
protocol/: marshalling.go  marshalling_test.go  protocol.go
pymchelper_example/: example_API.py
requirements/: local.txt
result/: result.go  result_test.go
scripts/: kill_yaptide.bat  run_dev_testing.bat  run_yaptide.bat  setup_plgrid.sh  start_with_docker.ps1  start_with_docker.sh  start_with_docker_develop.ps1  start_with_docker_develop.sh  testing.bat  update_certs.sh
setup/: beam.go  beam_test.go  beam_validate.go  body.go  body_geometry.go  body_test.go  detector.go  detector_constants.go  detector_cylinder.go  detector_geomap.go  detector_mesh.go  detector_plane.go  detector_scoring.go  detector_test.go  detector_zone.go  errors.go  material.go  material_compound.go  material_constants.go  material_predefined.go  material_state.go  material_test.go  material_voxel.go  options.go  options_test.go  particle.go  setup.go  setup_test.go  zone.go  zone_operation.go  zone_operation_test.go  zone_test.go
shield/: convert.go  convert_data.go  model.go  result_bdo.go  result_parser.go  result_tags.go  result_unit.go  serialize.go  setup.go  shield.go  simulation.go
simulation/: computing_library.go  request.go  runner.go  shield.go  shield_local.go  simulation.go
slurm/: fabric_test.py  slurm_methods.py  slurm_routes.py
test/: util.go  utils.go
tests/: api_test.py  conftest.py  test.py  test_aaa_s3.py  test_celery.py  test_database.py  (+10 more)
(+432 files in other folders)
