[tool.poetry]
name = "yaptide"
version = "2.0.0"
description = "Yaptide Yet Another Particle Transport IDE"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
celery = "5.4.0"
click = "8.1.8"
decorator = "5.2.1"
environs = "14.1.1"
eventlet = "0.39.1"
fabric = "3.2.2"
flask-restful = "0.3.10"
flask-sqlalchemy = "3.1.1"
flask-swagger-ui = "4.11.1"
flask-cors = "5.0.1"
flask-migrate = "4.1.0"
flask = "3.1.0"
pyjwt = "2.10.1"
pymchelper = "2.7.6"
redis = "5.2.1"
requests = "2.32.3"
sqlalchemy = "2.0.39"
werkzeug = "3.1.3"
boto3 = "1.37.13"
cryptography = "43.0.3"
psycopg = {version = "3.2.6", extras = ["binary"]}
yaptide-converter = { git = "https://github.com/yaptide/converter.git", rev = "3ff963fcf0aa3ed8b28c656d9eabb75b22aa4093"}

[tool.poetry.group.test.dependencies]
pytest-flask = "1.3.0"
pytest-cov = "6.0.0"
pytest-env = "1.1.5"
pytest = "8.3.5"
pre-commit = "4.1.0"
pytest-dotenv = "0.5.2"
black = "25.1.0"
pytest-rerunfailures = "^15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tooling configuration
[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[tool.yapfignore]
ignore_patterns = [
  ".venv/**"
]
