[tool.poetry]
name = "yaptide"
version = "2.0.0"
description = "Yaptide Yet Another Particle Transport IDE"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
celery = "5.5.2"
click = "8.1.8"
decorator = "5.2.1"
environs = "14.1.1"
eventlet = "0.40.0"
fabric = "3.2.2"
flask-restful = "0.3.10"
flask-sqlalchemy = "3.1.1"
flask-swagger-ui = "5.21.0"
flask-cors = "6.0.0"
flask-migrate = "4.1.0"
flask = "3.1.1"
pyjwt = "2.10.1"
pymchelper = "2.7.6"
redis = "6.1.0"
requests = "2.32.3"
sqlalchemy = "2.0.41"
werkzeug = "3.1.3"
boto3 = "1.38.21"
cryptography = "43.0.3"
psycopg = {version = "3.2.9", extras = ["binary"]}
yaptide-converter = { git = "https://github.com/yaptide/converter.git", rev = "69f615d0fb391984793017b7eaa0336c38fa1f4b"}

[tool.poetry.group.test.dependencies]
pytest-flask = "1.3.0"
pytest-cov = "6.1.1"
pytest-env = "1.1.5"
pytest = "8.3.5"
pre-commit = "4.2.0"
pytest-dotenv = "0.5.2"
black = "25.1.0"
pytest-rerunfailures = "^15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tooling configuration
[tool.yapf]
based_on_style = "pep8"
column_limit = 120

[tool.yapfignore]
ignore_patterns = [
  ".venv/**"
]
